crates/biome_js_parser/tests/js_test_suite/ok/decorator_export_default_function_and_function_overload.ts
export default function a():void;
export default function a(v: number):void;
export default function a(v?: any){
}
