crates/biome_js_parser/tests/js_test_suite/error/ts_object_setter_type_parameters.ts
({ set a<A>(value: A) {} });
({ set a<>(value: A) {} });
